unpackaged/main/default/objects/CreditNote__c/CreditNote__c.object-meta.xml
<CustomObject>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>AV-{0}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>