unpackaged/main/default/objects/CreditNote__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>