unpackaged/main/default/objects/CreditNote__c/fields/CreditNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteAmount__c</fullName>
    <label>Credit Note Amount</label>
    <summarizedField>CreditNoteLine__c.CreditNoteAmount__c</summarizedField>
    <summaryForeignKey>CreditNoteLine__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>