unpackaged/main/default/objects/CreditNote__c/fields/CreditNoteSend__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Note Send ?</label>
    <type>Checkbox</type>
</CustomField>