unpackaged/main/default/objects/CreditNote__c/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Request</label>
    <referenceTo>CustomerRequest__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>