unpackaged/main/default/objects/CreditNote__c/fields/tech_SendCreditNoteToCustomer__c.field-meta.xml
<CustomField>
    <fullName>tech_SendCreditNoteToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_SendCreditNoteToCustomer</label>
    <type>Checkbox</type>
</CustomField>