unpackaged/main/default/objects/CreditNote__c/fields/ThirdPartyNumber__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyNumber__c</fullName>
    <label>Third Party Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>